# Arduino-CMake-Template

./: CMakeLists.txt  README.md
cmake/: arduino-1.6.cmake  arduino_mega1280.cmake  arduino_mega2560.cmake  arduino_uno.cmake
scripts/: arduino.cmake  arduino_uno.cmake  ldd_hack.cpp
src/: main.cpp
